# home

./: .gitignore  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml  dev-runner.ps1
clients/desktop/: Cargo.toml  build.rs
clients/desktop/src/: app_watcher.rs  genshin.rs  main.rs  metrics.rs  net.rs  node.rs  sysinfo.rs
clients/desktop/ui/: app.slint
clients/desktop/ui/components/: line_graph.slint
clients/desktop/ui/modules/: app_watcher.slint  genshin.slint  metrics.slint  wishes.slint
clients/desktop/ui/pages/: dashboard.slint
clients/dev-runner/: Cargo.toml
clients/dev-runner/src/: main.rs
clients/launcher/: Cargo.toml  build.rs
clients/launcher/src/: lib.rs
clients/server/: Cargo.toml
clients/server/src/: broadcast.rs  dispatch.rs  dispatcher.rs  lib.rs  main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  module_client.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  lib.rs
crates/core/src/auth/: client.rs  mod.rs  server.rs
crates/core/src/crypto/: ml_kem.rs  mod.rs  noise.rs
crates/core/src/crypto/opaque/: mod.rs  opaque_client.rs  opaque_server.rs
crates/home-traits/: Cargo.toml
crates/modules/: Cargo.toml
crates/noob-core/: Cargo.toml
crates/noob-core/src/auth/: client.rs  mod.rs  server.rs  server_identity.rs  types.rs
crates/noob-core/src/crypto/: hybrid.rs  keys.rs  ml_kem.rs
crates/noob-core/src/crypto/opaque/: opaque_server.rs
crates/noob-modules/: Cargo.toml
crates/noob-storage/: Cargo.toml
crates/noob-storage/src/: blob.rs  lib.rs  store.rs
crates/noob-traits/: Cargo.toml
crates/noob-transport/: Cargo.toml
crates/noob-transport/src/: core_stream.rs  lib.rs  noise_stream.rs  quic.rs  xchacha_stream.rs
crates/storage/: Cargo.toml
crates/storage/src/: replication.rs
crates/transport/: Cargo.toml
crates/transport/src/: core_stream.rs  framed.rs  lib.rs  noise_stream.rs  quic.rs  xchacha_stream.rs
crates/vault-client/: Cargo.toml
crates/vault-client/src/: broadcast_rx.rs  lib.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: hash.rs  keys.rs  lib.rs  noise.rs
crates/vault-core/src/crypto/: aead.rs  keys.rs  mod.rs
crates/vault-module/: Cargo.toml
crates/vault-module/src/: lib.rs
crates/vault-storage/: Cargo.toml
crates/vault-transport/: Cargo.toml
crates/vault-transport/src/: codec.rs  frame.rs  lib.rs
deploy/: .dockerignore  Dockerfile  compose.yml  redeploy.ps1  setup.ps1
docs/: Security.md
installer/: Bundle.wxs  Noob.wxs  build.ps1
noob/: Cargo.toml  build.rs
noob/benches/: noob.rs
noob/src/: consts.rs  lib.rs  traits.rs
noob/src/client_shared/: mod.rs
noob/src/core/: mod.rs
noob/src/core/auth/: client.rs  client_store.rs  mod.rs  node_identity.rs  server.rs  server_identity.rs  server_store.rs  types.rs
noob/src/core/crypto/: aead.rs  keys.rs  mod.rs  noise.rs  tls.rs
noob/src/core/crypto/opaque/: mod.rs  opaque_client.rs  opaque_server.rs
noob/src/modules/: mod.rs  net.rs  registry.rs
noob/src/modules/app_watcher/: entity.rs  mod.rs
noob/src/modules/genshin/: fps_etw.rs  genshin_store.rs  mod.rs  wish.rs
noob/src/modules/metrics/: mod.rs
noob/src/modules/sys_info/: mod.rs
noob/src/net/: mod.rs  net_stats.rs  node.rs  remote.rs  telemetry.rs
noob/src/storage/: blob.rs  client_enrollment_store.rs  deps.rs  identity_store.rs  mod.rs  opaque_setup_store.rs  opaque_user_store.rs  replication.rs  schema.rs  secrets.rs  store.rs
noob/src/transport/: codec.rs  conn_manager.rs  core_stream.rs  dispatcher.rs  duplex.rs  frame.rs  mod.rs  noise_stream.rs  quic.rs  test_utils.rs  xchacha_stream.rs
