[workspace]
resolver = "2"
members = [
    "crates/vault-core",
    "crates/vault-module",
    "crates/vault-transport",
    "crates/vault-storage",
    "crates/vault-client",
    "clients/server",
    "clients/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
opaque-ke = "4.0.1"
ml-kem = "0.2"
snow = "0.10.0"
blake3 = "1"
ed25519-dalek = "2"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.10.0"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
redb = "3.1.1"
tokio = { version = "1", features = ["full"] }
tonic = "0.14.5"
prost = "0.14.3"
axum = "0.8"
tower = "0.5"
slint = "1"
thiserror = "2"
secrecy = "0.10.3"

vault-core = { path = "crates/vault-core" }
vault-module = { path = "crates/vault-module" }
vault-transport = { path = "crates/vault-transport" }
vault-storage = { path = "crates/vault-storage" }
vault-client = { path = "crates/vault-client" }
