[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/modules",
    "crates/transport",
    "crates/storage",
    "crates/client",
    "crates/home-traits",
    "clients/server",
    "clients/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
opaque-ke = { version = "4.0.1", features = ["argon2", "std"] }
ml-kem = { version = "0.3.0-rc.0", features = ["getrandom"] }
snow = "0.10.0"
blake3 = "1"
ed25519-dalek = "2"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
hybrid-array = "0.4"
zeroize = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
redb = "3.1.1"
tokio = { version = "1", features = ["full"] }
tonic = "0.14.5"
prost = "0.14.3"
axum = "0.8"
tower = "0.5"
slint = "1"
thiserror = "2"
anyhow = "1"
secrecy = "0.10.3"
quinn = "0.11"
trait-variant = "0.1"

core = { path = "crates/core" }
modules = { path = "crates/modules" }
transport = { path = "crates/transport" }
storage = { path = "crates/storage" }
client = { path = "crates/client" }
home-traits = { path = "crates/home-traits" }
