[package]
name = "noob"
version.workspace = true
edition.workspace = true

[dependencies]
opaque-ke = { workspace = true }
rand = { version = "0.8", features = ["getrandom"] }
ml-kem = { workspace = true }
snow = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
hybrid-array = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
trait-variant = { workspace = true }
quinn = { workspace = true }
tokio = { workspace = true }
redb = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
hex = "0.4"
tokio = { workspace = true }
