[package]
name = "noob"
version.workspace = true
edition.workspace = true

[features]
default = ["test-utils"]
test-utils = []

[dependencies]
opaque-ke = { workspace = true }
rand = { version = "0.8", features = ["getrandom"] }
ml-kem = { workspace = true }
snow = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
hybrid-array = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
trait-variant = { workspace = true }
quinn = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }

sysinfo = { workspace = true }
dirs-next = { workspace = true }

[build-dependencies]
rcgen = { workspace = true }

[target.'cfg(windows)'.dependencies]
ferrisetw = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }


[dev-dependencies]
hex = "0.4"
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "noob"
harness = false
required-features = ["test-utils"]
