[package]
name = "desktop"
version.workspace = true
edition.workspace = true

[dependencies]
slint = { workspace = true, features = ["renderer-skia"]}
noob = { workspace = true }
tokio = { workspace = true }
rfd = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
winres = "0.1"
embed-manifest = "1.4"