[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
core = { workspace = true }
modules = { workspace = true }
transport = { workspace = true }
storage = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
