[package]
name = "noob-storage"
version.workspace = true
edition.workspace = true

[dependencies]
noob-modules = { workspace = true }
redb = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
