[package]
name = "noob-transport"
version.workspace = true
edition.workspace = true

[dependencies]
noob-traits = { workspace = true }
noob-core = { workspace = true }

quinn = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
snow = { workspace = true }
secrecy = { workspace = true }
