[package]
name = "transport"
version.workspace = true
edition.workspace = true

[dependencies]
home-traits = { workspace = true }
core = { workspace = true }

quinn = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
snow = { workspace = true }
secrecy = { workspace = true }
