[package]
name = "vault-transport"
version.workspace = true
edition.workspace = true

[dependencies]
vault-core = { workspace = true }
vault-module = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
blake3 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
